--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
     <title>Edgar's Portfolio</title>
   </head>
@@ -24,7 +25,6 @@
       <div class="collapse navbar-collapse" id="navLinks">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a href="" class="nav-link">CONTACT ME</a>
           </li>
         </ul>
       </div>
@@ -32,9 +32,100 @@
     <!-- End of Navbar -->
 
     <!-- Start of First Section -->
-    
+    <section class="container-fluid px-0">
+      <div class="row align-items-center">
+        <div class="col-lg-6 content">
+          <div id="headingGroup" class="text-white text-center d-lg-block">
+            <h1>WELCOME<span> /></span>TO</h1>
+            <h1>EDGAR'S</h1>
+            <h1>PORTFOLIO</h1>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <img class="img-fluid" src="imgs/portpic.jpg" alt="photo of Edgar">
+        </div>
+      </div>
+    </section>
 
     <!-- End of First Section -->
+
+    <section class="container-fluid px-0">
+      <div class="row align-items-center content">
+        <div class="col-md-6 order-2 order-md-1">
+          <img src="imgs/description.jpg" alt="Milk and Donuts in a jar." class="img-fluid">
+        </div>
+        <div class="col-md-6 text-center order-1 order-md-2">
+          <div class="row justify-content-center">
+            <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+              <h2>ABOUT ME</h2>
+              <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-laptop" viewBox="0 0 16 16">
+                <path d="M13.5 3a.5.5 0 0 1 .5.5V11H2V3.5a.5.5 0 0 1 .5-.5h11zm-11-1A1.5 1.5 0 0 0 1 3.5V12h14V3.5A1.5 1.5 0 0 0 13.5 2h-11zM0 12.5h16a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 12.5z"/>
+              </svg>
+              <!-- <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline"> -->
+              <p class="lead">Hi, I'm <b>Edgar Gutierrez</b><br>I am an aspriing Web Developer. I live in Kerman, CA and on my leisure time, I love to go fishing. I am currently taking coding classes at Bitwise, but I have actually completed all the courses back in 2018-2019.</p>
+              <div class="social-icons">
+                <a href="https://github.com/egutierrez130" target="_blank"><i class="bi bi-github"></i></a>
+                <a href="https://www.linkedin.com/in/edgar-gutierrez-6031ab139/" target="_blank"><i class="bi bi-linkedin"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=100012306514472" target="_blank"><i class="bi bi-facebook"></i></a>
+                <a href="https://www.instagram.com/edgarman1/" target="_blank"><i class="bi bi-instagram"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row align-items-center content">
+        <div class="col-md-6 text-center">
+          <div class="row justify-content-center">
+            <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+              <h2>PORTFOLIO</h2>
+              <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-sun d-lg-inline" viewBox="0 0 16 16">
+                <path d="M8 11a3 3 0 1 1 0-6 3 3 0 0 1 0 6zm0 1a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z"/>
+              </svg>
+              <h3>ECO BRIGHT SOLAR</h3>
+              <!-- <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline"> -->
+              <p class="lead">Eco Bright Solar reached out to me and was seeking to redo/refresh and modernize their previous website.<br>I was able to do just that by creating a website that was simple, informative, and most importantly, mobile friendly for the client.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <a href="https://ecobright-solar.com/index.html" target="_blank" >
+            <img src="imgs/EBS1.png" alt="" class="img-fluid">
+        </a>
+        </div>
+      </div>
+      <div class="row align-items-center content">
+        <div class="col-md-6 order-2 order-md-1">
+          <img src="imgs/connect.jpg" alt="photo of a phone pen and journal" class="img-fluid">
+        </div>
+
+        <!-- START OF CONTACT FORM -->
+        <div class="col-md-6 text-center order-1 order-md-2">
+          <div class="row justify-content-center">
+            <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+              <div class="contact-clean">
+                <form method="post">
+                  <h2 class="text-center">CONTACT ME</h2>
+                  <div class="mb-3">
+                    <input class="form-control" type="text" name="name" placeholder="Name">
+                  </div>
+                  <div class="mb-3">
+                    <input class="form-control" type="phone" name="phone" placeholder="Phone Number">
+                  </div>
+                  <div class="mb-3">
+                    <input class="form-control" type="email" name="email" placeholder="Email">
+                  </div>
+                  <div class="mb-3"><textarea class="form-control" name="message" placeholder="Message" rows="10"></textarea>
+                  </div>
+                  <div class="mb-3"><button class="btn btn-primary" type="submit">Send </button>
+                  </div>
+              </form>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- END OF CONTACT FORM -->
+      </div>
+    </section>
 
    
 
