Updated the structure of my code by adding comments to each section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <title>Edgar's Portfolio</title>
   </head>
   <body>
-    <!-- Start of Navbar -->
+
+    <!-- START OF NAVBAR SECTION -->
+
     <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md py-0 fixed-top">
       <a href="#" class="navbar-brand">EDGAR</a>
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle Navigation">
@@ -29,9 +31,11 @@
         </ul>
       </div>
     </nav>
-    <!-- End of Navbar -->
 
-    <!-- Start of First Section -->
+    <!-- END OF NAVBAR SECTION -->
+
+    <!-- START OF INTRO SECTION -->
+
     <section class="container-fluid px-0">
       <div class="row align-items-center">
         <div class="col-lg-6 content">
@@ -47,7 +51,9 @@
       </div>
     </section>
 
-    <!-- End of First Section -->
+    <!-- END OF INTRO SECTION -->
+
+    <!-- START OF ABOUT ME SECTION -->
 
     <section class="container-fluid px-0">
       <div class="row align-items-center content">
@@ -61,7 +67,7 @@
               <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-laptop" viewBox="0 0 16 16">
                 <path d="M13.5 3a.5.5 0 0 1 .5.5V11H2V3.5a.5.5 0 0 1 .5-.5h11zm-11-1A1.5 1.5 0 0 0 1 3.5V12h14V3.5A1.5 1.5 0 0 0 13.5 2h-11zM0 12.5h16a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 12.5z"/>
               </svg>
-              <!-- <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline"> -->
+
               <p class="lead">Hi, I'm <b>Edgar Gutierrez</b><br>I am an aspriing Web Developer. I live in Kerman, CA and on my leisure time, I love to go fishing. I am currently taking coding classes at Bitwise, but I have actually completed all the courses back in 2018-2019.</p>
               <div class="social-icons">
                 <a href="https://github.com/egutierrez130" target="_blank"><i class="bi bi-github"></i></a>
@@ -73,6 +79,11 @@
           </div>
         </div>
       </div>
+
+      <!-- END OF ABOUT ME SECTION -->
+
+      <!-- START OF PORTFOLIO SECTION -->
+      
       <div class="row align-items-center content">
         <div class="col-md-6 text-center">
           <div class="row justify-content-center">
@@ -93,12 +104,15 @@
         </a>
         </div>
       </div>
+
+      <!-- END OF PORTFOLIO SECTION-->
+
+      <!-- START OF CONTACT SECTION -->
+
       <div class="row align-items-center content">
         <div class="col-md-6 order-2 order-md-1">
           <img src="imgs/connect.jpg" alt="photo of a phone pen and journal" class="img-fluid">
         </div>
-
-        <!-- START OF CONTACT FORM -->
         <div class="col-md-6 text-center order-1 order-md-2">
           <div class="row justify-content-center">
             <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
@@ -123,8 +137,10 @@
             </div>
           </div>
         </div>
-        <!-- END OF CONTACT FORM -->
       </div>
+
+      <!-- END OF CONTACT SECTION -->
+
     </section>
 
    
